Resize elements for tablet, fix chat message wrapping

--- a/frontend/src/App.scss
+++ b/frontend/src/App.scss
@@ -32,7 +32,3 @@ body {
     color: $nav-link-color;
   }
 }
-
-@media only screen and (min-width: 768px) {
- /* desktop styles here if needed */
-}
