--- a/frontend/src/components/Chat/Chat.scss
+++ b/frontend/src/components/Chat/Chat.scss
@@ -8,7 +8,6 @@
   bottom: 0;
   left: 0;
   width: 100vw;
-  overflow-y: scroll;
   overflow-x: hidden;
   position: fixed;
   padding: 0.5em;
@@ -28,6 +27,7 @@
     display: flex;
     width: 100vw;
     overflow-y: scroll;
+    overflow-x: hidden;
     flex-direction: column;
     color: $chat-message-color;
     background-color: $chat-background-color;
@@ -35,12 +35,17 @@
     padding-left: 0.5rem;
   }
   .chat-list-item {
+    display: flex;
+    flex-flow: row wrap;
     padding-bottom: 0.2rem;
     padding-top: 0.2rem;
     background-color: $chat-background-color;
     font-family: 'Ubuntu', sans-serif;
+    span {
+      white-space: pre-wrap;
+    }
   }
-  .chat-input {
+  .chat-input-container {
     background-color: $chat-background-color;
     position: fixed;
     top: 65vh;
@@ -59,7 +64,7 @@
   #chat-submit {
     border: 5rem;
     height: 4vh;
-    width: 90vw;
+    width: 75vw;
     border: 1px solid $chat-input-border-color;
     border-radius: 0.4rem;
     margin: 0.4rem;
@@ -80,6 +85,7 @@
     color: $chat-message-color;
     border-radius: 0.4rem;
     margin: 0.2rem;
+    outline: none;
   }
   button {
     margin: 0.2rem;
@@ -91,37 +97,83 @@
     }
   }
 }
-
+/* Tablet CSS */
 @media only screen and (min-width: 768px) {
   .chat {
     height: 100vh;
     bottom: 0;
-    left: 85vw;
+    left: 80vw;
     right: 0;
-    width: 15vw;
+    width: 20vw;
     padding-top: 0;
     border-left: $chat-input-border;
     ::-webkit-scrollbar-track {
       margin-top: 10vh;
     }
 
-    .chat-input {
-      width: 15vw;
-      left: 85vw;
+    .chat-input-container {
+      width: 20vw;
+      left: 80vw;
       right: 0;
-      top: 88vh;
+      top: 80vh;
+      height: 20vh;
       border-left: $chat-input-border;
       border-bottom: 0;
     }
 
     #chat-submit {
       width: 12vw;
+      height: 2rem;
     }
     
     #message-list {
       padding-top: 0;
-      margin-bottom: 12vh;
-      width: 15vw;
+      margin-bottom: 20vh;
+      width: 20vw;
+    }
+  }
+}
+/* Desktop CSS */
+@media only screen and (min-width: 1024px) {
+  .chat {
+    height: 100vh;
+    bottom: 0;
+    left: 80vw;
+    right: 0;
+    width: 20vw;
+    padding-top: 0;
+    border-left: $chat-input-border;
+    ::-webkit-scrollbar-track {
+      margin-top: 10vh;
+    }
+
+    button {
+      margin: 0.5rem;
+    }
+
+    .chat-pm select {
+      margin: 0.5rem;
+    }
+
+    .chat-input-container {
+      width: 20vw;
+      left: 80vw;
+      right: 0;
+      top: 80vh;
+      height: 20vh;
+      border-left: $chat-input-border;
+      border-bottom: 0;
+    }
+
+    #chat-submit {
+      width: 18vw;
+      height: 2rem;
+    }
+    
+    #message-list {
+      padding-top: 0;
+      margin-bottom: 20vh;
+      width: 20vw;
     }
   }
 }
